[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/moves.png" type="Texture" id=1]
[ext_resource path="res://sprites/move_select_outline.png" type="Texture" id=2]
[ext_resource path="res://scripts/move_button.gd" type="Script" id=3]
[ext_resource path="res://sounds/select_move_index.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="MoveButton" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="OutlineSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="MoveSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ClickStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SoundEffects"

[connection signal="input_event" from="Area2D" to="." method="_on_click"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_leave"]
